# librarian

./: .gitignore  CLAUDE.md  FEEDBACK.md  LICENSE  README.md  idea.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: library.md
scripts/: add.py  compile.py  init.py  lint.py  refresh.py  reindex.py  search.py  status.py  twitter_login.py  watch.py
scripts/lib/: chunker.py  config.py  embedder.py  fetcher.py  indexer.py  retriever.py  sources.py  watchlist.py
scripts/lib/channels/: __init__.py  arxiv.py  github.py  hn.py  pubmed.py  rss.py  twitter.py
shelves/: ai-engineering.yaml  ai.yaml  biomedical.yaml
skills/library-knowledge/: SKILL.md
tests/: conftest.py  test_channels_arxiv.py  test_channels_github.py  test_channels_hn.py  test_channels_pubmed.py  test_channels_rss.py  test_channels_twitter.py  test_chunker.py  test_compile.py  test_config.py  test_init.py  test_lint.py  test_retriever.py  test_sources.py  test_watch.py  test_watchlist.py
