[project]
name = "library-skill"
version = "0.1.0"
description = "Local-first personal knowledge layer for coding agents"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastembed>=0.4.0",
    "lancedb>=0.15.0",
    "pyyaml>=6.0",
    "pymupdf>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.setuptools]
packages = []
